# ZeroTouch

./: .gitignore  LICENSE  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt  setup_models.py
.github/workflows/: reqsUpdate.yml  tests.yml
report/: README.md
src/: __init__.py  __main__.py  main.py
src/core/: SMOOTHING.md  __init__.py  calibration.py  gestures.py  mapper.py  processor.py  tracker.py
src/gestures/: __init__.py  detectors.py  gestures.py
src/output/: controller.py
tests/: test_calibration.py  test_gestures.py  test_processor.py  test_tracker.py
