[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irisflow"
version = "1.0.0"
description = "Real-time head-compensated iris gaze tracker with gesture control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wisdom Ononiba" },
]
keywords = ["eye-tracking", "computer-vision", "mediapipe", "gaze", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mediapipe>=0.10.9",
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
irisflow = "src.main:main"
irisflow-setup = "setup_models:download_models"

[project.urls]
Homepage = "https://github.com/Wissniper/Gesture-And-Eye-Track-System"
Repository = "https://github.com/Wissniper/Gesture-And-Eye-Track-System"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
